# wandbox

./: .clang-format  .gitignore  .gitmodules  FoldMinValue.cpp  README  README.md  README.rst  TRIGGER.md  VERSION  buildbase.py  deploy.sh  ghwebhook.sh  install_deps.sh  install_tools.sh  package-lock.json  package.json  package.sh  primeFactors.cpp  run.py
canine/: .babelrc  .babelrc.js  .eslintrc.cjs  .eslintrc.yml  .gitignore  README.md  build-clangd-wasm.sh  deploy.sh  package-lock.json  package.json  remix.config.js  remix.env.d.ts  server.ts  tsconfig.json  vite.config.ts  webpack.config.js  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
canine2/: load-context.ts  package-lock.json  package.json  wrangler.jsonc
canine_js_mui/: .flowconfig  package-lock.json  package.json
canine_nextjs/: next.config.js  package.json  tsconfig.json
canine_old/: .babelrc.js  README.md  webpack.config.js
canine_ts_bs_npm/: .eslintrc.json  tsconfig.json  webpack.config.js
cattleshed/: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  SPEC.md  cattleshed.conf.in  cattleshed.service.in  cfg.hpp  client.cc  cmake.sh  common.hpp  compiler.default  compilers.default  compilers.py  config  config.h.in  configure  configure.ac  ptracer.cc  runserver.sh  server.cc  threadtest.cc
cattleshed/scripts/: .gitignore  Makefile.am  Makefile.in  cattleshed.service.in  upstart.in
cattleshed/src/: .gitignore  Makefile.am  Makefile.in  cattleshed_server.h  cfg.hpp  client.cc  common.hpp  coroutine.hpp  jail.cc  load_config.cc  load_config.hpp  posixapi.hpp  prlimit.cc  ptracer.cc  quoted_printable.cc  quoted_printable.hpp  server.cc  syslogstream.cc  syslogstream.hpp  yield.hpp
cattleshed/test/: Makefile.am  Makefile.in  exec.test.cc  jail.sh
cattleshed_mock/: .gitignore  Main.hs  Protocol.hs
cmake/: FindCAP.cmake  FindCLI11.cmake  FindCppCMS.cmake  FindCppDB.cmake  FindGgrpc.cmake  FindICU.cmake  FindOpenSSL.cmake  FindPCRE.cmake  FindRT.cmake  FindSQLite3.cmake  FindSpdlog.cmake
feline/: .env  .gitignore  Cargo.toml
feline/.sqlx/: query-05c3cb9ba97ace9491d3ba7461d2fba97c241f3f80238bcf8429d0fedade691c.json  query-20d5f57c3ea81920027fb457a5661b4e285528afd05abe6e8d1d46644c97c278.json  query-6dcdc74bae36b7c4c401c157ea99e4077eb6205693c49bdecdf904e6c23a798f.json  query-76da89d6f03de5f9bd33561b14267f8a2a51470285ddeaa63fafedb581c5a7cb.json  query-95e1caabcb2f0731d129dc5bd6701d2defd4820b1905a63f5abd854bd08d4506.json  query-a51b994a56690656006e4117a6e07f6d8182f49f09f0ac8b6c53aa6e719faace.json  query-c4d8b3b99026134addf729e7a61f4357ac4f27746f8b031b44cd7453deaf7067.json  query-e8bf8de58f66685b5c4ef0015ca6503804197320af2ba600d7a92208aae04723.json
feline/Containerfiles/wandbox-runner/: Containerfile
feline/conf/: feline.service  podman.json  sponsors.json
feline/migrations/: 20250310143819_initial.sql
feline/src/: api_compile_json.rs  api_compile_ndjson.rs  api_hpplib.rs  api_list_json.rs  api_permlink.rs  api_sponsors.rs  api_template.rs  config.rs  db.rs  jail.rs  main.rs  podman.rs  types.rs  util.rs
feline/src/tests/data/: api_compile_input.json  api_list_input.json  config_expected.json  config_input.json  hpplib.json
kennel/: .ghci  .gitignore  API.md  API.rst  Api.hs  ApiTypes.hs  Application.hs  CMakeLists.txt  Cache.hs  ChanMap.hs  Foundation.hs  Import.hs  ImportRule.hs  InsertPassword.hs  LICENSE  Model.hs  README.rst  Settings.hs  build.sh  cmake.sh  copy.sh  deploy.sh  devel.hs  kennel.cabal  kennel.rc.in  kennel.service.in  main.hs  sponsors.json
kennel/Handler/: Api.hs  Compile.hs  Permlink.hs  Root.hs  Source.hs
kennel/Settings/: CompilerConfig.hs  Development.hs  StaticFiles.hs
kennel/VM/: Conduit.hs  IpPortFile.hs  Protocol.hs  QuotedPrintable.hs
kennel/app/: main.hs
kennel/config/: keter.yaml  models  routes  settings.yml  settings.yml.template  sqlite.yml  vmip
kennel/src/: cattleshed_client.h  jsonif_nothrow.h  jsonif_serializer.h  kennel_server.h  kennel_session.h  kennel_shared_data.h  main.cpp  permlink.h
kennel/static/: polyfills  select2
kennel/static/codemirror/: lib
kennel/static/js/: jquery.cookie.js
kennel/templates/: compiler.hamlet  compiler.julius  compiler.lucius  default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.lucius  editor.hamlet  editor.julius  editor.lucius  homepage.hamlet  homepage.julius  homepage.lucius  result_container.hamlet  result_container.julius  result_container.lucius  result_window.hamlet  result_window.julius  result_window.lucius  stdin.hamlet  stdin.julius  stdin.lucius
kennel/tests/: HomeTest.hs  TestImport.hs  main.hs
kennel2/: .gitignore  API.rst  CMakeLists.txt  Makefile.am  README.rst  autogen.sh  build.sh  cmake.sh  configure.ac  content.h  cppcms.sh  cppdb.sh  eventsource.h  kennel.cpp  kennel.js  kennel.json.in  kennel.service.in  make.sh  my_skin.tmpl  permlink.h  protocol.h  run.sh  sponsors.json
kennel2/content/: root.h  root.html.tmpl
kennel2/scripts/: kennel.service
kennel2/src/: Makefile.am  cattleshed_client.h  cattleshed_server.h  common.h  common.tmpl  eventsource.h  grpc_client.h  http_client.h  kennel.cpp  libs.h  ndjson.h  nojs_list.tmpl  nojs_root.h  nojs_root.tmpl  permlink.h  protocol.h  quoted_printable.h  root.h  root.html.tmpl  root.tmpl  user.h  user.tmpl
kennel2/static/codemirror/: addon  keymap  mode  theme
kennel2/static/css/: root.css
kennel2/static/js/: PostEventSource.js  ansi_up.js  jquery.url.js  root.js
nyandbox/: .gitignore  Application.hs  ChanMap.hs  Foundation.hs  LICENSE  Settings.hs  devel.hs  nyandbox.cabal
patch/: 001_http_protocol.patch  002_ignore_http_header_comments.patch  003_cxx11.patch  003_cxx11_notest.patch  (+1 more)
test/: CMakeLists.txt  cmake.sh  debug.sh  test.json  test_e2e.sh  test_grpc.cpp
test/assets/: compilers.default  expected_api_compile.json  expected_api_compile.ndjson  expected_api_list.json  expected_compile  expected_issue299.json  test2.json  test_fork.json  test_fork2.json  test_iplimit.json  test_issue299.json  test_outputflood.json  test_storage.json
(+300 files in other folders)
