name:              kennel
version:           0.0.0
author:            melpon
maintainer:        melpon
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://kennel.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     Handler.Compile
                     Handler.Source
                     Handler.Permlink
                     ChanMap
                     VM.Protocol
                     VM.IpPortFile
                     VM.Conduit
                     VM.QuotedPrintable

    ghc-options:   -Wall -threaded -O0 -ddump-splices
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                GADTs
                OverloadedStrings
                FlexibleContexts
                MultiParamTypeClasses
                TypeFamilies

executable         kennel
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0 -ddump-splices
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                GADTs
                OverloadedStrings
                FlexibleContexts
                MultiParamTypeClasses
                TypeFamilies

    build-depends: base                          >= 4          && < 5
                 , yesod                         == 1.0.0.2
                 , hamlet
                 , yesod-default
                 , shakespeare-text
                 , shakespeare-css
                 , shakespeare-js
                 , yesod-core
                 , yesod-static
                 , wai
                 , wai-extra
                 , text
                 , bytestring
                 , clientsession
                 , transformers
                 , yaml
                 , conduit
                 , blaze-builder
                 , hjsmin
                 , directory
                 , warp
                 , yesod-auth
                 , persistent
                 , persistent-sqlite
                 , yesod-persistent
                 , yesod-form
                 , template-haskell
                 , wai-eventsource               == 1.2.0.3
                 , containers
                 , random
                 , dataenc
                 , attoparsec
                 , network
                 , time
                 , yesod-json
                 , aeson
